--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "sweetalert2": "^11.22.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
