--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tailwind:init": "tailwindcss init"
+    "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
@@ -24,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "sweetalert2": "^11.22.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.3.5"
