--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
-    "sweetalert2": "^11.22.0",
+    "sweetalert2": "^11.6.13",
     "tailwind-scrollbar-hide": "^4.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.20.7",
