--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.6.13",
     "tailwind-scrollbar-hide": "^4.0.0",
     "yup": "^1.6.1"
